--- a/Proyecto/foro-ciencias-pumask/pumask/pom.xml
+++ b/Proyecto/foro-ciencias-pumask/pumask/pom.xml
@@ -63,16 +63,27 @@
     </dependency>
     
     
+        <!-- bootstrap & jquery -->
     <dependency>
-        <groupId>org.webjars.bower</groupId>
-        <artifactId>materialize</artifactId>
-        <version>0.97.3</version>
+      <groupId>org.webjars</groupId>
+      <artifactId>bootstrap</artifactId>
+      <version>4.0.0-2</version>
     </dependency>
-    
     <dependency>
       <groupId>org.webjars</groupId>
       <artifactId>jquery</artifactId>
       <version>3.3.1-1</version>
+    </dependency>
+    <dependency>
+      <groupId>org.webjars</groupId>
+      <artifactId>font-awesome</artifactId>
+      <version>5.0.6</version>
+    </dependency>
+    
+    <dependency>
+        <groupId>org.webjars.bower</groupId>
+        <artifactId>materialize</artifactId>
+        <version>0.97.3</version>
     </dependency>
   </dependencies>
 
