--- a/Proyecto/foro-ciencias-pumask/pumask/src/main/webapp/WEB-INF/web.xml
+++ b/Proyecto/foro-ciencias-pumask/pumask/src/main/webapp/WEB-INF/web.xml
@@ -19,4 +19,52 @@
         <servlet-name>Faces Servlet</servlet-name>
         <url-pattern>*.xhtml</url-pattern>
     </servlet-mapping>
+
+
+
+  <!-- Welcome page -->
+  <welcome-file-list>
+    <welcome-file>index.xhtml</welcome-file>
+  </welcome-file-list>
+
+  <!-- web fonts -->
+  <mime-mapping>
+    <extension>eot</extension>
+    <mime-type>application/vnd.ms-fontobject</mime-type>
+  </mime-mapping>
+  <mime-mapping>
+    <extension>otf</extension>
+    <mime-type>font/opentype</mime-type>
+  </mime-mapping>
+  <mime-mapping>
+    <extension>ttf</extension>
+    <mime-type>application/x-font-ttf</mime-type>
+  </mime-mapping>
+  <mime-mapping>
+    <extension>woff</extension>
+    <mime-type>application/x-font-woff</mime-type>
+  </mime-mapping>
+  <mime-mapping>
+    <extension>svg</extension>
+    <mime-type>image/svg+xml</mime-type>
+  </mime-mapping>
+  <mime-mapping>
+    <extension>ico</extension>
+    <mime-type>image/x-icon</mime-type>
+  </mime-mapping>
+
+  <!-- aplicamos el filtro sobre las páginas deseadas.-->
+  <filter>
+    <filter-name>SessionFilter</filter-name>
+    <filter-class>com.clockwork.pumask.controlador.SessionFilter</filter-class>
+  </filter>
+  <filter-mapping>
+    <filter-name>SessionFilter</filter-name>
+    <url-pattern>/secured/*</url-pattern>
+  </filter-mapping>
+
+  <session-config>
+    <session-timeout>60</session-timeout>
+  </session-config>
+
 </web-app>
