--- a/Proyecto/foro-ciencias-pumask/pumask/pom.xml
+++ b/Proyecto/foro-ciencias-pumask/pumask/pom.xml
@@ -7,7 +7,22 @@
   <version>1.0-SNAPSHOT</version>
   <name>pumask Maven Webapp</name>
   <url>http://maven.apache.org</url>
+
+  <repositories>
+    <repository>
+      <id>prime-repo</id>
+      <name>PrimeFaces Maven Repository</name>
+      <url>http://repository.primefaces.org</url>
+    </repository>
+  </repositories>
+
+
   <dependencies>
+    <dependency>
+  <groupId>org.primefaces.themes</groupId>
+  <artifactId>excite-bike</artifactId>
+  <version>1.0.10</version>
+</dependency>
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
