--- a/Proyecto/foro-ciencias-pumask/pumask/pom.xml
+++ b/Proyecto/foro-ciencias-pumask/pumask/pom.xml
@@ -23,6 +23,11 @@
   <artifactId>excite-bike</artifactId>
   <version>1.0.10</version>
 </dependency>
+<dependency>
+  <groupId>org.primefaces.themes</groupId>
+  <artifactId>ui-lightness</artifactId>
+  <version>1.0.10</version>
+</dependency>
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
