Correo e imagen de usuario

--- a/Proyecto/foro-ciencias-pumask/pumask/src/main/webapp/WEB-INF/web.xml
+++ b/Proyecto/foro-ciencias-pumask/pumask/src/main/webapp/WEB-INF/web.xml
@@ -10,6 +10,20 @@
         <param-name>javax.faces.PROJECT_STAGE</param-name>
         <param-value>Development</param-value>
     </context-param>
+     <context-param>
+        <param-name>primefaces.UPLOADER</param-name>
+        <param-value>commons</param-value>
+     </context-param>
+    <filter>
+        <filter-name>PrimeFaces FileUpload Filter</filter-name>
+        <filter-class>org.primefaces.webapp.filter.FileUploadFilter</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>PrimeFaces FileUpload Filter</filter-name>
+        <servlet-name>Faces Servlet</servlet-name>
+    </filter-mapping>
+    
+    
     <servlet>
         <servlet-name>Faces Servlet</servlet-name>
         <servlet-class>javax.faces.webapp.FacesServlet</servlet-class>
@@ -33,12 +47,12 @@
 
   <!-- navigation rules -->
   <navigation-rule>
-		<from-view-id>mi_perfil.xhtml</from-view-id>
-		<navigation-case>
-			<from-outcome>index</from-outcome>
-			<to-view-id>index.xhtml</to-view-id>
-			<redirect />
-		</navigation-case>
+        <from-view-id>mi_perfil.xhtml</from-view-id>
+        <navigation-case>
+            <from-outcome>index</from-outcome>
+            <to-view-id>index.xhtml</to-view-id>
+            <redirect />
+        </navigation-case>
   </navigation-rule>
 
   <!-- web fonts -->
