--- a/Proyecto/foro-ciencias-pumask/pumask/pom.xml
+++ b/Proyecto/foro-ciencias-pumask/pumask/pom.xml
@@ -41,6 +41,19 @@
         <scope>provided</scope>
     </dependency>
     
+    <dependency>
+        <groupId>javax</groupId>
+        <artifactId>javaee-web-api</artifactId>
+        <version>7.0</version>
+        <scope>provided</scope>
+    </dependency>
+    
+    <dependency>
+        <groupId>com.sun.mail</groupId>
+        <artifactId>javax.mail</artifactId>
+        <version>1.5.0</version>
+    </dependency>
+    
     
     <dependency>
         <groupId>javax.servlet</groupId>
@@ -83,6 +96,8 @@
     </dependency>
     
     
+    
+    
         <!-- bootstrap & jquery -->
     <dependency>
       <groupId>org.webjars</groupId>
@@ -105,7 +120,25 @@
         <artifactId>materialize</artifactId>
         <version>0.97.3</version>
     </dependency>
+    
+    
+    <!-- Commons upload -->
+    <dependency>
+        <groupId>commons-fileupload</groupId>
+        <artifactId>commons-fileupload</artifactId>
+        <version>1.3</version>
+    </dependency>
+
+    <dependency>
+        <groupId>commons-io</groupId>
+        <artifactId>commons-io</artifactId>
+        <version>2.0</version>
+    </dependency>
   </dependencies>
+
+
+
+
 
 
   <build>
