--- a/Proyecto/foro-ciencias-pumask/pumask/src/main/webapp/WEB-INF/web.xml
+++ b/Proyecto/foro-ciencias-pumask/pumask/src/main/webapp/WEB-INF/web.xml
@@ -38,7 +38,10 @@
         <url-pattern>*.xhtml</url-pattern>
     </servlet-mapping>
 
-
+<error-page>
+    <exception-type>java.lang.Throwable</exception-type>
+    <location>/errors.xhtml</location>
+</error-page>
 
   <!-- Welcome page -->
   <welcome-file-list>
